# QT-viewer

./: BMP.h  CMakeLists.txt  CMakeUserPresets.json  Histogram.h  main.cpp  main.h  scena.cpp  scena.h  view.cpp  view.h
Новая папка/: BMP.h  CMakeLists.txt  Histogram.h  images.qrc  main.h  main.pro  scena.cpp  scena.h  test.cpp
